fixed overflow issue in image grid

--- a/src/CSS_Modules/Stay/stay.module.css
+++ b/src/CSS_Modules/Stay/stay.module.css
@@ -11,6 +11,15 @@
   grid-template-columns: repeat(2, 1fr);
   border: 3px solid var(--tertiary-color-1);
   border-radius: 10px;
+  overflow: hidden;
+}
+
+.imageListWrapper{
+   overflow: hidden;
+}
+
+.imageListItem{
+   overflow-y: hidden;
 }
 
 .responsiveDiv {
